ci: install npm deps without optional native packages to avoid oxide binding errors

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,10 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (disable optional native deps)
+        env:
+          NPM_CONFIG_OPTIONAL: 'false'
+        run: npm ci --no-optional
 
       - name: Build
         run: npm run build
